Fix Request a Demo button alignment on tablet

--- a/src/styles/_responsive.scss
+++ b/src/styles/_responsive.scss
@@ -234,6 +234,14 @@ $mobile-port: 351px;
 
         }
     }
+
+    footer {
+        .wrapper {
+            .outline-btn {
+                right: 60px;
+            }
+        }
+    }
 }
 
 // Tablet 767
