--- a/src/styles/partials/_footer.scss
+++ b/src/styles/partials/_footer.scss
@@ -64,6 +64,6 @@ footer {
         padding: 0 0 6px;
         position: absolute;
         top: 0;
-        right: 60px;
+        right: 0;
     }
 }
